# SecurAula-AI

./: AGENT_CONFIGURATION_COMPLETE.md  EDUMON_SETUP_GUIDE.md  EduMon-Estudiante.rar  FINAL_SETUP_INSTRUCTIONS.md  INICIAR_SERVIDOR.bat  INSTALACION_RAPIDA.md  INSTALAR_DEPENDENCIAS.bat  QTHREAD_FIX_SUMMARY.md  README.md  SERVIDOR_AUTOMATIZADO.md  SOLUCION_ACCESO_EXTERNO.md  SOLUTION_README.md  agent_config.json  auto_update_ngrok.py  config.json  dashboard.py  device_id.txt  diagnostico_servidor.py  fix_acceso_externo.py  fix_edumon.py  iniciar_servidor.sh  instalar_dependencias.sh  install_dependencies.py  install_simple.py  requirements.txt  run_agent.py  run_demo_agent.py  run_server.py  server.py  start_simple_backend.py  test_connection.py  test_new_server.py  test_quick.py  test_simple.py
SERVIDOR FINAL/: ARCHIVOS_MOVIDOS.md  INICIO_RAPIDO.bat  README.md  run_agent_gui.py
SERVIDOR FINAL/agent/: __init__.py  config.example.json  config.json  main.py  main_simple.py  main_simple_windows.py  requirements.txt
SERVIDOR FINAL/docs/: EDUMON_SETUP_COMPLETE.md  SERVER_MANAGEMENT.md
SERVIDOR FINAL/server/: dashboard.html  package-lock.json  package.json  server.js  server_original.js  start_server.bat
agent/: main.py
backup/: AGENTS.md  README.md  agent_config.json  package-lock.json
edumon/: .gitignore  LICENSE  Makefile  pyproject.toml  requirements-server.txt  run_server.bat  run_server.py  start_teacher_program.bat
edumon/.github/workflows/: ci.yml
edumon/agent/: README_AGENT.md  config.example.json  device_id.txt  main_simple.py  test_connection.py
edumon/agent/core/: agent_core.py  api_client.py  config.py
edumon/agent/ui/: gui_pyqt.py
edumon/backend/: requirements.txt
edumon/backend/app/: main.py
edumon/backend/app/api/: __init__.py
edumon/backend/app/api/v1/: __init__.py  clients.py
edumon/backend/app/core/: config.py  database.py  logging.py  security.py
edumon/backend/app/models/: __init__.py  audit_log.py  classroom.py  client.py  metrics.py  schemas.py  session.py  user.py
edumon/backend/app/services/: __init__.py  client_service.py  database_service.py  metrics_service.py  session_service.py  storage.py
edumon/backend/app/templates/: dashboard.html  login.html
edumon/backend/tests/: __init__.py  conftest.py  test_client_api.py
edumon/docker/: .env.example  Dockerfile.backend  docker-compose-external.yml  docker-compose.yml
edumon/docs/: installation.md
edumon/scripts/: build_agent_advanced.py
edumon/server/: .env.example  README_SERVER.md  control.py  dashboard.py  main.py  main_standalone.py  main_standalone_fixed.py  main_standalone_public.py  retention.py  run_simple.py
new_nodejs_server/: README.md  dashboard.html  index.html  package-lock.json  package.json  server.js
(+30 files in other folders)
